# website

./: .eslintrc.cjs  .gitignore  .markdownlint.yml  .prettierrc  Cargo.toml  Dockerfile  Makefile.toml  README.md  build-dev-docker.sh  package.json  pnpm-lock.yaml  run-dev-docker.sh  run-dev.sh  svelte.config.js  vercel.json  vite.config.ts
backend/: Cargo.toml
backend/src/: main.rs
client/: Cargo.toml  Trunk.toml  index.html  style.scss
client/assets/markdown/: interests.md
client/src/: birthday_counter.rs  interests_list.rs  main.rs  media_player.rs  navbar.rs  route.rs  social.rs  webring.rs
client/static/: changelog.yml
client/static/markdown/: interests.md
client/styles/: birthday_counter.scss  custom.scss  fonts.scss  interests_list.scss  media_player.scss  navbar.scss  social.scss  style.scss  variables.scss  webring.scss
common/: Cargo.toml
common/src/: blog.rs
frontend/: Cargo.toml  Trunk.toml
frontend/src/: main.rs
scripts/: generate_code.ts  generate_types.ts  make_post_schema.ts
server/: Cargo.toml
server/assets/blog/: post_metadata.json
server/assets/blog/_template/: index.md
server/assets/blog/welcome/: index.md  metadata.yml
server/src/: badges.rs  blog.rs  main.rs  paths.rs
src/: app.html  hooks.server.ts  mdsvex.svelte
src/creatures/: flooferland.yml
src/lib/: aboutme.ts  config.ts  data.ts  markdown.js  posts.ts  rss.ts  server.util.ts  types.ts  utils.ts
src/lib/components/: BannerNotice.svelte  BrandIcon.svelte  CharEmoji.svelte  CodeBlock.svelte  Emoji.svelte  Footer.svelte  Header.svelte  Link.svelte  LucideIcon.svelte  MusicPlayer.svelte  NavLink.svelte  ThemeToggle.svelte  VerticalRule.svelte  index.ts
src/lib/storage/: dictionary.yml  yummy_words.lst
src/lib/stores/: theme.ts
src/lib/styles/: app.scss  post.scss  shiki.scss  variables.scss
src/posts/: post_metadata.json
src/posts/first/: post.md
src/posts/second/: post.md
src/posts/template/: index.md  metadata.yml
src/posts/text_relationships/: index.md  metadata.yml
src/posts/welcome/: index.md  metadata.yml
src/routes/: +layout.svelte  +page.md.bck  +page.server.ts  +page.svelte
src/routes/blog/: +page.server.ts  +page.svelte
src/routes/contact/: +page.server.ts  +page.svelte
(+28 files in other folders)
