[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-macro = "0.21"
yew-router = "0.18"
common = { path = "../common" }
markdown = "1.0.0-alpha.21"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlAudioElement"
]

[dependencies.yew_icons]
version = "0.8"
features = [
    # Social icons
    "BootstrapGithub",
    "SimpleIconsKofi",
    "SimpleIconsItchdotio",
    "LucideGamepad",
    "BootstrapEye",
    "SimpleIconsReddit",
    "LucideMail",
    "SimpleIconsTumblr",
    "SimpleIconsMastodon",
    "SimpleIconsDiscord",
    "SimpleIconsYoutube"
]
